--- a/admin.html
+++ b/admin.html
@@ -295,7 +295,7 @@
     </div>
 
     <script>
-        // [New API URL]
+        // [FINAL API URL]
         const API_URL = "https://script.google.com/macros/s/AKfycbxfByKA4Cch3bbWJ3MwHPwjvuORpVVnPgYmuPR3wzXSi5ZPa2gO4AY3Hg0RMTVI1Ik/exec";
         let db = [], processedDB = [], stop = false;
 
