--- a/report.html
+++ b/report.html
@@ -146,7 +146,8 @@
         }
 
         .hero-main {
-            font-size: 26px;
+            font-size: 18px;
+            /* Changed from 26px to 18px (text-lg) */
             font-weight: 800;
             color: var(--deep);
             /* Deep Green #2d3e1d */
@@ -287,8 +288,10 @@
             <div class="visual-row">
                 <!-- CUTE ROUND SILHOUETTE (No Stroke, Olive Fill) -->
                 <div style="text-align:center;">
+                    <!-- Updated SVG container with reduced size -->
                     <div style="display: flex; justify-content: center; position: relative;">
-                        <svg viewBox="0 0 100 200" width="200" height="400" style="position: relative;">
+                        <!-- Changed width/height to 100/200 as requested -->
+                        <svg viewBox="0 0 100 200" width="100" height="200" style="position: relative;">
                             <defs>
                                 <clipPath id="humanSilhouette">
                                     <path
@@ -492,18 +495,11 @@
             else if (total >= 50) ht.innerText = "직무 적합도에 대한 면밀한 검토가 필요합니다. 🤔";
             else ht.innerText = "조직 적응에 어려움이 있을 수 있어 심층 면접이 필요합니다. 🧐";
 
-            // Silhouette Animation
             // Gauge Animation (New Logic)
             const fillHeight = (total / 100) * 200;
             const fillElement = document.getElementById('scoreFill');
             if (fillElement) {
-                // Fill from bottom up: y decreases as height increases
-                // viewBox height base is 200 (from 0 to 200 in the new SVG?)
-                // Wait, viewBox is "0 0 100 200". Max Y is 200.
-                // If height is 200, y should be 0.
-                // If height is 0, y should be 200.
-
-                // Use a small timeout to ensure transition plays
+                // Fill from bottom up
                 setTimeout(() => {
                     fillElement.setAttribute('y', 200 - fillHeight);
                     fillElement.setAttribute('height', fillHeight);
@@ -512,7 +508,12 @@
 
             // --- CHART RESTORATION ---
             const labels = Object.keys(scores);
+            const values = Object.values(scores);
             const ctx = document.getElementById('competencyChart').getContext('2d');
+
+            // Calc Min/Max for Coloring
+            const maxVal = Math.max(...values);
+            const minVal = Math.min(...values);
 
             Chart.defaults.font.family = "'Noto Sans KR'";
 
@@ -522,7 +523,7 @@
                     labels: labels,
                     datasets: [{
                         label: '역량 점수',
-                        data: Object.values(scores),
+                        data: values,
                         backgroundColor: 'rgba(137, 162, 48, 0.2)', // #89a230
                         borderColor: '#89a230',
                         pointBackgroundColor: '#2d3e1d',
@@ -542,14 +543,24 @@
                                     weight: '700',
                                     family: "'Noto Sans KR'"
                                 },
-                                color: '#2d3e1d', // Deep Green
+                                // [NEW] Conditional Color Logic
+                                color: function (context) {
+                                    // context.index (chart.js v3+)
+                                    const idx = context.index;
+                                    const val = values[idx];
+                                    if (val === maxVal) return '#ff4d4d'; // Red for Max
+                                    if (val === minVal) return '#4d79ff'; // Blue for Min
+                                    return '#ffa500'; // Orange for Default
+                                },
+                                // [NEW] Multi-line Callback & Padding
+                                padding: 15,
                                 callback: function (label, index) {
-                                    // [STRICT] Label Format: "Name [Score]"
-                                    return label + " " + Object.values(scores)[index] + "점";
+                                    // Return array for multiline
+                                    return [label, values[index] + "점"];
                                 }
                             },
                             ticks: {
-                                display: false,
+                                display: false, // Hide numeric ticks (0, 20, 40...)
                                 stepSize: 20
                             },
                             grid: {
