--- a/report.html
+++ b/report.html
@@ -139,26 +139,33 @@
             }
         }
 
-        /* HERO - White Background, Deep Green Text */
+        /* HERO - Styled Box */
         .hero {
             text-align: left;
             margin-bottom: 30px;
         }
 
+        /* [STYLE UPDATE] 19px, bold, gray bg, rounded */
         .hero-main {
-            font-size: 26px;
-            font-weight: 800;
-            color: var(--deep);
-            /* Deep Green #2d3e1d */
-            line-height: 1.4;
-            margin-bottom: 10px;
-        }
-
-        .hero-sub {
-            font-size: 18px;
+            font-size: 19px;
             font-weight: 700;
             color: var(--deep);
             /* Deep Green */
+            line-height: 1.6;
+            margin-bottom: 10px;
+            background-color: #f1f3f5;
+            padding: 24px;
+            border-radius: 12px;
+            word-break: keep-all;
+        }
+
+        .hero-sub {
+            font-size: 16px;
+            font-weight: 600;
+            color: #495057;
+            text-align: right;
+            margin-top: 5px;
+            padding-right: 10px;
         }
 
         /* VISUAL */
@@ -171,8 +178,8 @@
         }
 
         .silhouette-box {
-            width: 140px;
-            height: 300px;
+            width: 100px;
+            height: 200px;
             margin: 0 auto;
             position: relative;
         }
@@ -244,6 +251,21 @@
             /* Deep Green */
         }
 
+        /* Wave Animation */
+        @keyframes wave {
+            0% {
+                transform: translateX(0);
+            }
+
+            100% {
+                transform: translateX(-50%);
+            }
+        }
+
+        .wave-fill {
+            animation: wave 3s linear infinite;
+        }
+
         footer {
             margin-top: auto;
             font-size: 11px;
@@ -285,31 +307,39 @@
             </div>
 
             <div class="visual-row">
-                <!-- CUTE ROUND SILHOUETTE (No Stroke, Olive Fill) -->
+                <!-- CUTE ROUND SILHOUETTE (Wave Fill) -->
                 <div style="text-align:center;">
                     <div class="silhouette-box">
-                        <svg viewBox="0 0 216 400" xmlns="http://www.w3.org/2000/svg">
+                        <svg viewBox="0 0 100 200" width="100" height="200">
                             <defs>
-                                <clipPath id="bodyClip">
+                                <!-- Cute Rounded Silhouette Clip -->
+                                <clipPath id="cuteClip">
                                     <path
-                                        d="M108,0C55,0,0,50,0,120c0,50,30,90,80,110v170h56V230c50-20,80-60,80-110C216,50,161,0,108,0z" />
+                                        d="M50,15 C61,15 70,24 70,35 C70,46 61,55 50,55 C39,55 30,46 30,35 C30,24 39,15 50,15 Z 
+                                             M25,65 Q50,55 75,65 Q85,70 85,90 V170 Q85,190 50,190 Q15,190 15,170 V90 Q15,70 25,65 Z" />
                                 </clipPath>
                             </defs>
-                            <!-- Fill Only -->
-                            <path
-                                d="M108,0C55,0,0,50,0,120c0,50,30,90,80,110v170h56V230c50-20,80-60,80-110C216,50,161,0,108,0z"
-                                fill="#89a230" stroke="none" />
 
-                            <!-- Liquid (Olive Green) -->
-                            <g clip-path="url(#bodyClip)">
-                                <rect id="liquid-rect" x="0" y="200" width="216" height="400" fill="#89a230"
-                                    transition="all 1s ease" />
+                            <!-- Background Outline -->
+                            <path
+                                d="M50,15 C61,15 70,24 70,35 C70,46 61,55 50,55 C39,55 30,46 30,35 C30,24 39,15 50,15 Z 
+                                     M25,65 Q50,55 75,65 Q85,70 85,90 V170 Q85,190 50,190 Q15,190 15,170 V90 Q15,70 25,65 Z"
+                                fill="#f1f3f5" stroke="#e9ecef" stroke-width="2" />
+
+                            <!-- Wave Fill Container -->
+                            <g clip-path="url(#cuteClip)">
+                                <g id="wave-group" transform="translate(0, 200)">
+                                    <!-- Wave Path (Double width for looping) -->
+                                    <path class="wave-fill" fill="#89a230" opacity="0.8"
+                                        d="M0,0 Q25,-10 50,0 T100,0 T150,0 T200,0 V200 H0 Z" width="200" height="200"
+                                        transform="scale(1,1)" />
+                                </g>
                             </g>
                         </svg>
                     </div>
                 </div>
 
-                <!-- RADAR CHART (Restored) -->
+                <!-- RADAR CHART -->
                 <div class="chart-box">
                     <canvas id="competencyChart"></canvas>
                 </div>
@@ -494,15 +524,38 @@
             else if (total >= 50) ht.innerText = "직무 적합도에 대한 면밀한 검토가 필요합니다. 🤔";
             else ht.innerText = "조직 적응에 어려움이 있을 수 있어 심층 면접이 필요합니다. 🧐";
 
-            // Silhouette Animation
-            setTimeout(() => {
-                const h = 400 - (total * 4);
-                document.getElementById('liquid-rect').setAttribute('y', h);
-            }, 500);
+            // Wave Animation Logic
+            // Calculate height mapped to 200px (SVG Height)
+            // 0 score -> 200 (full down)
+            // 100 score -> 0 (full up)
+            // Actually it's translated. 
+            // y=200 is bottom. y=0 is top.
+            // Wave path starts at y=0 relative to group.
+            // So we move the group up.
+            // Wait, I defined wave group transform translate(0, 200). That puts the wave top at y=200.
+            // To fill X%, we need to move it up by (200 * X/100).
+            // So new Y = 200 - (200 * score/100).
 
-            // --- CHART RESTORATION ---
+            const fillH = (total / 100) * 200;
+            const targetY = 200 - fillH;
+
+            const waveGroup = document.getElementById('wave-group');
+            if (waveGroup) {
+                // Animate transition
+                waveGroup.style.transition = "transform 1.5s ease-out";
+                setTimeout(() => {
+                    waveGroup.setAttribute('transform', `translate(0, ${targetY})`);
+                }, 100);
+            }
+
+            // --- CHART LOGIC ---
             const labels = Object.keys(scores);
+            const values = Object.values(scores);
             const ctx = document.getElementById('competencyChart').getContext('2d');
+
+            // Calc Min/Max for Coloring
+            const maxVal = Math.max(...values);
+            const minVal = Math.min(...values);
 
             Chart.defaults.font.family = "'Noto Sans KR'";
 
@@ -512,7 +565,7 @@
                     labels: labels,
                     datasets: [{
                         label: '역량 점수',
-                        data: Object.values(scores),
+                        data: values,
                         backgroundColor: 'rgba(137, 162, 48, 0.2)', // #89a230
                         borderColor: '#89a230',
                         pointBackgroundColor: '#2d3e1d',
@@ -532,10 +585,19 @@
                                     weight: '700',
                                     family: "'Noto Sans KR'"
                                 },
-                                color: '#2d3e1d', // Deep Green
+                                // [NEW] Conditional Color Logic
+                                color: function (context) {
+                                    const idx = context.index;
+                                    const val = values[idx];
+                                    if (val === maxVal) return '#ff4d4d'; // Red for Max
+                                    if (val === minVal) return '#4d79ff'; // Blue for Min
+                                    return '#000000'; // Black for others
+                                },
+                                // [NEW] Multi-line Callback & Padding
+                                padding: 15,
                                 callback: function (label, index) {
-                                    // [STRICT] Label Format: "Name [Score]"
-                                    return label + " " + Object.values(scores)[index] + "점";
+                                    // Return array for multiline
+                                    return [label, values[index] + "점"];
                                 }
                             },
                             ticks: {
